--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ jobs:
         - uses: actions/checkout@v4
         - uses: actions/cache@v4.0.2
           with: 
+            path: ci
             key: ${{ runner.os }}-ci
         - uses: actions/setup-node@v4
         - run: npm ci
