--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,15 +6,22 @@ jobs:
   test:
       runs-on: ubuntu-latest
       steps:
-        - uses: actions/checkout@v4
-        - uses: actions/cache@v4.0.2
+        - name: checkout
+          uses: actions/checkout@v4
+        - name: cache
+          uses: actions/cache@v4.0.2
           with: 
             path: ci
             key: ${{ runner.os }}-ci
-        - uses: actions/setup-node@v4
-        - run: npm ci
-        - run: npm run lint
-        - run: npm run test
-        - uses: livewing/lcov-job-summary@v1.1.0
+        - name: setup node
+          uses: actions/setup-node@v4
+        - name: install dependencies
+          run: npm ci
+        - name: lint
+          run: npm run lint
+        - name: unit test
+          run: npm run test
+        - name: unit test summary
+          uses: livewing/lcov-job-summary@v1.1.0 # todo node20
           with:
             lcov: coverage/covid-care/lcov.info
