--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install and Build 🔧 
+        run: |
           npm ci
           npm run build:ghpages
       - name: Deploy 🚀
