--- a/package.json
+++ b/package.json
@@ -16,43 +16,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.0.5",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/platform-server": "^18.0.0",
-    "@angular/router": "^18.0.0",
-    "@angular/ssr": "^18.0.5",
-    "express": "^4.18.2",
+    "@angular/animations": "^18.2.7",
+    "@angular/cdk": "^18.2.7",
+    "@angular/common": "^18.2.7",
+    "@angular/compiler": "^18.2.7",
+    "@angular/core": "^18.2.7",
+    "@angular/forms": "^18.2.7",
+    "@angular/platform-browser": "^18.2.7",
+    "@angular/platform-browser-dynamic": "^18.2.7",
+    "@angular/platform-server": "^18.2.7",
+    "@angular/router": "^18.2.7",
+    "@angular/ssr": "^18.2.7",
+    "express": "^4.21.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "tslib": "^2.7.0",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.5",
-    "@angular/cli": "^18.0.5",
-    "@angular/compiler-cli": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.2.7",
+    "@angular/cli": "^18.2.7",
+    "@angular/compiler-cli": "^18.2.7",
     "@cypress/schematic": "^2.5.2",
-    "@types/express": "^4.17.17",
+    "@types/express": "^5.0.0",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
-    "angular-eslint": "18.2.0",
+    "@types/node": "^22.7.5",
+    "angular-eslint": "^18.3.1",
     "autoprefixer": "^10.4.19",
-    "cypress": "latest",
-    "eslint": "^9.8.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "cypress": "^13.15.0",
+    "eslint": "^9.12.0",
+    "jasmine-core": "^5.3.0",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "typescript": "~5.4.2",
-    "typescript-eslint": "8.0.0"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.8.1"
   }
 }
